<resources>
    <string name="app_name">MoviesApp</string>
    <string name="txt_title">Title</string>
    <string name="txt_id">ID</string>
    <string name="txt_year">Year</string>
    <string name="txt_country">Country</string>
    <string name="txt_imdb_rating">Imdb</string>
    <string name="txt_genres">Genres</string>
    <string name="todo">Movie poster</string>
    <string name="edt_search_movie">جستجوی فیلم</string>
    <string name="txt_poster_view">movie poster</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_search_content_description">Search for movies</string>
    <string name="txt_tab_genres">Genres</string>
    <string name="txt_tab_search">Search</string>
    <string name="txt_tab_Home">Home</string>
</resources>
